--- a/package.json
+++ b/package.json
@@ -23,19 +23,24 @@
     "@astrojs/react": "^2.3.2",
     "@astrojs/tailwind": "^4.0.0",
     "@nanostores/react": "^0.7.1",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "astro": "^2.10.13",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "colord": "^2.9.3",
     "dayjs": "^1.11.9",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.274.0",
     "markdown-it": "^13.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "npm:@lorenzobloedow/react-icons@^1.0.0",
     "react-no-ssr": "^1.1.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@playwright/test": "^1.37.1",
