--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "astro-tailwind-example",
-  "version": "0.0.1",
+  "version": "0.3.1",
   "config": {
     "base": "app-name"
   },
   "volta": {
-    "node": "18.12.1"
+    "node": "18.18.0"
   },
   "scripts": {
     "dev": "astro dev --host 0.0.0.0",
@@ -20,66 +20,62 @@
     "push": "pnpm check.msg && pnpm ssg && pnpm git && git push",
     "ftp": "git ftp push -s test --insecure",
     "deploy": "pnpm check.vpn && git pull && pnpm ftp",
+    "patch.up": "npm version patch --no-git-tag-version",
     "git": "git add . && git commit -a -m $M"
   },
   "dependencies": {
-    "@astrojs/react": "^2.3.2",
-    "@astrojs/tailwind": "^4.0.0",
+    "@astrojs/react": "^3.0.4",
+    "@astrojs/tailwind": "^5.0.2",
     "@nanostores/react": "^0.7.1",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "astro": "^2.10.13",
-    "axios": "^1.4.0",
-    "class-variance-authority": "^0.7.0",
+    "astro": "^3.4.0",
+    "axios": "^1.6.0",
     "clsx": "^2.0.0",
     "colord": "^2.9.3",
-    "daisyui": "^3.7.3",
-    "dayjs": "^1.11.9",
+    "daisyui": "^3.9.4",
+    "dayjs": "^1.11.10",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.274.0",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "npm:@lorenzobloedow/react-icons@^1.0.0",
-    "react-no-ssr": "^1.1.0",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss": "^3.3.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "^3.3.5",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-easing": "^0.2.1"
   },
   "devDependencies": {
-    "@playwright/test": "^1.37.1",
-    "@tailwindcss/typography": "^0.5.9",
-    "@types/download": "^8.0.2",
-    "@types/fs-extra": "^11.0.1",
-    "@types/lodash": "^4.14.197",
-    "@types/lodash-es": "^4.17.8",
+    "@playwright/test": "^1.39.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/download": "^8.0.4",
+    "@types/fs-extra": "^11.0.3",
+    "@types/lodash": "^4.14.200",
+    "@types/lodash-es": "^4.17.10",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^20.5.4",
-    "@types/ping": "^0.4.1",
-    "@types/prompts": "^2.4.4",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/parser": "^6.4.1",
-    "astro-eslint-parser": "^0.14.0",
-    "autoprefixer": "^10.4.15",
+    "@types/node": "^20.8.9",
+    "@types/ping": "^0.4.3",
+    "@types/prompts": "^2.4.7",
+    "@types/react": "^18.2.33",
+    "@types/react-dom": "^18.2.14",
+    "@typescript-eslint/parser": "^6.9.0",
+    "astro-eslint-parser": "^0.16.0",
+    "autoprefixer": "^10.4.16",
     "cheerio": "1.0.0-rc.12",
     "copy-dir": "^1.3.0",
     "download": "^8.0.0",
-    "eslint": "^8.47.0",
-    "eslint-config-next": "^13.4.19",
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
     "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "fs-extra": "^11.1.1",
-    "googleapis": "^126.0.0",
+    "googleapis": "^126.0.1",
     "lodash": "^4.17.21",
     "ping": "^0.4.4",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.31",
     "prompts": "^2.4.2",
-    "sass": "^1.66.1",
-    "tailwindcss-easing": "^0.2.1",
+    "sass": "^1.69.5",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "typescript-transform-paths": "^3.4.6"
   }
 }
