--- a/my-scripts/tsconfig.json
+++ b/my-scripts/tsconfig.json
@@ -13,7 +13,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
     "forceConsistentCasingInFileNames": true,
     "declaration": true,
     "resolveJsonModule": true,
