--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "markdown-it": "^13.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "npm:@lorenzobloedow/react-icons@^1.0.0",
+    "react-icons": "^4.11.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.5",
     "tailwindcss-animate": "^1.0.7",
